--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
             <label>
                 Converter <b>para</b>
-                <select class="currency-to" disabled>
-                    <option value="BRL" data-symbol="R$" data-icon="br" selected>Real Brasileiro</option>
+                <select class="currency-to">
+                    <!-- Opções dinâmicas serão carregadas pelo JavaScript -->
                 </select>
             </label>
 
